# plumbline

./: .gitignore  .mcp.json  ARCHITECTURE.md  CA_SVM_RESULT.md  CLAUDE.md  CURRICULUM.md  MORNING_BRIEF.md  README.md  STATUS.md  TODO.md  __init__.py  adaptive_harness.py  bootstrap.sh  ca_svm_report.json  cascade.jsonl  first_rep.py  flywheel.py  geom_dirichlet_probe.py  halmos_check.py  halmos_rep.py  hf_mirror.py  invariant_agent.py  llm.py  mcp_server.py  model_rep.py  pact_check.py  prompt_improve.py  pyproject.toml  rep_log.py  reps.jsonl  reps_routed.jsonl  requirements.txt  roadblock_dispatch.py  score.py  scoreboard.py  severity.py  sol_depth.py  sol_dispose.py  sol_flywheel.py  sol_graph.py  (+8 more)
.claude/: launch.json
.devcontainer/: devcontainer.json  setup.sh
.githooks/: pre-commit
deploy/: Dockerfile  README.md  app.py  build_science_html.py  gen_science_data.py  live_halmos.py  modal_app.py  science.html  science_data.json
docs/: CASCADE_GROUNDED.md  CONTEST_RUNBOOK.md  PIPELINE_AUDIT_2026-06-09.md
grammar/: tla_failuremode.lark
lean/: SummaryObligation.lean
logs/: autonomous_2026-06-07.jsonl  autonomous_2026-06-08.jsonl  autonomous_2026-06-09.jsonl  cycle.jsonl
notes/: CA_AUDIT_RULE_EVOLUTION_FEASIBILITY_2026-06-20.md  CLOUD_SOCIETY_SYNTH_2026-06-22.md  GATE_EXPLORATION_2026-06-21.md  PROPOSER_BET_FULLCORPUS_2026-06-21.md  RANKING_FITNESS_GATE_SPEC_2026-06-20.md  SOCIETY_ARCHITECTURE_2026-06-22.md  design-for-agent-use-2026-06-16.md  dogfood-cork-honest-fail-2026-06-16.md  dogfood-frictions-2026-06-16.md  dogfood-uc-2026-06-16.md  (+3 more)
tools/: cli.py  (+66 more)
(+432 files in other folders)
